assets/queries/cloudFormation/aws/http_port_open/test/negative4.json
{
  "Resources": {
    "Negative2SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for negative test cases",
        "VpcId": {
          "Ref": "MyVPC"
        }
      }
    },
    "Negative2IPv4Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Negative2SecurityGroup"
        },
        "IpProtocol": "udp",
        "FromPort": 80,
        "ToPort": 80,
        "CidrIp": "0.0.0.0/0"
      }
    },
    "Negative2IPv4Ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Negative2SecurityGroup"
        },
        "IpProtocol": "-1",
        "FromPort": 100,
        "ToPort": 200,
        "CidrIp": "0.0.0.0/0"
      }
    },
    "Negative2IPv4Ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Negative2SecurityGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": 0,
        "ToPort": 100,
        "CidrIp": "8.8.0.0/16"
      }
    },
    "Negative2IPv4Ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Negative2SecurityGroup"
        },
        "IpProtocol": "udp",
        "FromPort": 5000,
        "ToPort": 5000,
        "CidrIp": "8.8.0.0/16"
      }
    },
    "Negative2IPv6Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Negative2SecurityGroup"
        },
        "IpProtocol": "udp",
        "FromPort": 22,
        "ToPort": 22,
        "CidrIpv6": "::/0"
      }
    },
    "Negative2IPv6Ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Negative2SecurityGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": 5000,
        "ToPort": 5000,
        "CidrIpv6": "0000:0000:0000:0000:0000:0000:0000:0000/0"
      }
    },
    "Negative2IPv6Ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Negative2SecurityGroup"
        },
        "IpProtocol": "udp",
        "FromPort": 22,
        "ToPort": 22,
        "CidrIpv6": "2400:cb00::/32"
      }
    },
    "Negative2IPv6Ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Negative2SecurityGroup"
        },
        "IpProtocol": "udp",
        "FromPort": 5000,
        "ToPort": 5000,
        "CidrIpv6": "2400:cb00::/32"
      }
    }
  }
}
