assets/queries/cloudFormation/aws/http_port_open/test/positive4.json
{
  "Resources": {
    "DualStackSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for IPv4 and IPv6 ingress rules",
        "VpcId": {
          "Ref": "MyVPC"
        }
      }
    },
    "IPv4Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "DualStackSecurityGroup"
        },
        "IpProtocol": "-1",
        "FromPort": 0,
        "ToPort": 100,
        "CidrIp": "0.0.0.0/0"
      }
    },
    "IPv4Ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "DualStackSecurityGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": 70,
        "ToPort": 90,
        "CidrIp": "0.0.0.0/0"
      }
    },
    "IPv6Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "DualStackSecurityGroup"
        },
        "IpProtocol": "-1",
        "FromPort": 0,
        "ToPort": 100,
        "CidrIpv6": "::/0"
      }
    },
    "IPv6Ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "DualStackSecurityGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": 70,
        "ToPort": 90,
        "CidrIpv6": "0000:0000:0000:0000:0000:0000:0000:0000/0"
      }
    }
  }
}
